@@ -18,6 +18,7 @@
  401449 sort-by-author doesn't work properly (Charles Hill, Jason Mack)
  402200 support large article cache sizes (Craig Ruff)
  400814 unable to mark some groups as read (Christophe)
+ 403066 getting new groups, conditional jump depends on uninitialised value (Charles)
 
 
 0.121 "Dortmunder"
